# HippoCafe

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Config.cmake.in  LICENSE  README.md  build.gradle  build.sbt  settings.gradle
include/cafe/: analysis.hpp  annotation.hpp  apidef.hpp  attribute.hpp  cafe.hpp  class_file.hpp  class_reader.hpp  class_rw.hpp  class_tree.hpp  class_writer.hpp  constant_pool.hpp  constants.hpp  data_reader.hpp  data_rw.hpp  data_writer.hpp  instruction.hpp  label.hpp  model.hpp  result.hpp  stackmap.hpp  stub.hpp  value.hpp
include/cafe/class_file/: annotation.hpp  attribute.hpp  class_file.hpp  constant_pool.hpp  stackmap.hpp
include/cafe/model/: analysis.hpp  annotation.hpp  class_model.hpp  instruction.hpp  label.hpp
include/hippo/: cafe.hpp
project/: build.properties
src/: analysis.cpp  annotation.cpp  bytebuf.cpp  bytebuf.hpp  class_file.cpp  class_reader.cpp  class_rw.cpp  class_tree.cpp  class_writer.cpp  composer.cpp  composer.hpp  constants.cpp  constast_pool.cpp  data_reader.cpp  data_rw.cpp  data_writer.cpp  decomposer.cpp  decomposer.hpp  instruction.cpp  label.cpp  parser.cpp  result.cpp  stub.cpp  value.cpp  vaule.cpp  visitor.cpp  visitor.hpp
src/class_file/: class_file.cpp  parser.cpp  parser.hpp  visitor.cpp  visitor.hpp
src/main/scala/rip/hippo/api/hippocafe/: ClassFile.scala  ClassReader.scala  ClassWriter.scala  FieldInfo.scala  MethodInfo.scala
src/main/scala/rip/hippo/api/hippocafe/access/: AccessFlag.scala
src/main/scala/rip/hippo/api/hippocafe/attribute/: Attribute.scala  AttributeInfo.scala
src/main/scala/rip/hippo/api/hippocafe/builder/: ClassBuilder.scala
src/main/scala/rip/hippo/api/hippocafe/constantpool/: ConstantPool.scala  ConstantPoolKind.scala
src/main/scala/rip/hippo/api/hippocafe/exception/: HippoCafeException.scala
src/main/scala/rip/hippo/api/hippocafe/instruction/: BytecodeOpcode.scala  CodeTranslator.scala  Instruction.scala
src/main/scala/rip/hippo/api/hippocafe/stackmap/: StackMapFrame.scala
src/main/scala/rip/hippo/api/hippocafe/util/: Type.scala
src/main/scala/rip/hippo/api/hippocafe/version/: MajorClassFileVersion.scala
src/main/scala/rip/hippo/hippocafe/: ClassFile.scala  ClassReader.scala  ClassWriter.scala  FieldInfo.scala  LocalVariableInfo.scala  MethodInfo.scala
src/main/scala/rip/hippo/hippocafe/access/: AccessFlag.scala
src/main/scala/rip/hippo/hippocafe/analaysis/: MaxStackDepthCalculator.scala  MaxStackHeightCalculator.scala
src/main/scala/rip/hippo/hippocafe/analaysis/block/: Block.scala  BlockService.scala
src/main/scala/rip/hippo/hippocafe/analaysis/impl/: StandardMaxStackDepthCalculator.scala  StandardMaxStackHeightCalculator.scala
src/main/scala/rip/hippo/hippocafe/attribute/: Attribute.scala  AttributeInfo.scala
src/main/scala/rip/hippo/hippocafe/attribute/impl/: AnnotationDefaultAttribute.scala  BootstrapMethodsAttribute.scala  CodeAttribute.scala  ConstantValueAttribute.scala  DeprecatedAttribute.scala  EnclosingMethodAttribute.scala  ExceptionsAttribute.scala  InnerClassesAttribute.scala  LineNumberTableAttribute.scala  LocalVariableTableAttribute.scala  LocalVariableTypeTableAttribute.scala  MethodParametersAttribute.scala  ModuleAttribute.scala  ModuleMainClassAttribute.scala  ModulePackagesAttribute.scala  NestHostAttribute.scala  NestMembersAttribute.scala  PermittedSubclassesAttribute.scala  RecordAttribute.scala  RuntimeInvisibleAnnotationsAttribute.scala  RuntimeInvisibleParameterAnnotationsAttribute.scala  RuntimeInvisibleTypeAnnotationsAttribute.scala  RuntimeVisibleAnnotationsAttribute.scala  RuntimeVisibleParameterAnnotationsAttribute.scala  RuntimeVisibleTypeAnnotationsAttribute.scala  SignatureAttribute.scala  SourceDebugExtensionAttribute.scala  SourceFileAttribute.scala  StackMapTableAttribute.scala  SyntheticAttribute.scala  UnknownAttribute.scala
src/main/scala/rip/hippo/hippocafe/builder/: ClassBuilder.scala
src/main/scala/rip/hippo/hippocafe/constantpool/: ConstantPool.scala  ConstantPoolKind.scala
src/main/scala/rip/hippo/hippocafe/constantpool/info/: ConstantPoolInfo.scala  ValueAwareness.scala
src/main/scala/rip/hippo/hippocafe/disassembler/context/: AssemblerContext.scala  AssemblerFlag.scala  PreprocessedBranch.scala  UniqueByte.scala
src/main/scala/rip/hippo/hippocafe/exception/: HippoCafeException.scala
src/main/scala/rip/hippo/hippocafe/stackmap/: StackMapFrame.scala
src/main/scala/rip/hippo/hippocafe/util/: IOUtil.scala  Type.scala
src/main/scala/rip/hippo/hippocafe/verification/: MethodVerificationService.scala
src/main/scala/rip/hippo/hippocafe/version/: MajorClassFileVersion.scala
src/main/scala/rip/hippo/hippocafe/writer/: AttributeWriter.scala  ClassAttributedMetaWriter.scala  ClassHeaderWriter.scala  ClassMetaWriter.scala  ConstantPoolWriter.scala  FieldWriter.scala  MethodWriter.scala
src/model/: analysis.cpp  annotation.cpp  class_model.cpp  composer.cpp  composer.hpp  decomposer.cpp  decomposer.hpp  instruction.cpp  label.cpp
src/test/resources/: AnnotationTest.java  ArrayTest.java  ForLoopTest.java  ForLoopTestLong.java  HelloWorld.java  InnerClass.java  InterfaceTest.java  InvokeDynamicTest.java  JumpInit.java  NestedForLoopTest.java  ParameterFrameTest.java  TableSwitchTest.java  TcbTest.java  calculations.txt
src/test/resources/crasher/: README.MD
src/test/scala/rip/hippo/testing/hippocafe/: .gitignore  BuilderSuite.scala  ConstantPoolSuite.scala  CustomClassLoader.scala  InstructionReadSuite.scala  LowWriteSuite.scala  ReadSuite.scala  TypeSuite.scala
tests/: CMakeLists.txt  analysis_test.cpp  class_model_test.cpp  class_reader_test.cpp  class_rw_test.cpp  class_tree_test.cpp  class_writer_test.cpp  data_rw_test.cpp  desc_parse_test.cpp
tests/data/: AnnotationTest.java  BranchTest.java  CalculationTest.java  FinallyTest.java  FinallyTest2.java  InterfaceTest.java  InvokeDynamicTest.java  LoadConstantClassTest.java  LocalAnnotation.java  LongInitTest.java  LookupSwitchTest.java  RecArray.java  SwitchTest.java  TernaryTest.java
(+287 files in other folders)
